# granite-tsfm

./: README.md  pyproject.toml
.github/workflows/: pypi-release.yml
agentic/mcp-server/: pyproject.toml
services/finetuning/: pyproject.toml
services/inference/: pyproject.toml
