[build-system]
requires = ["setuptools>=78.1.1", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "tsagentkit-patchtst-fm"
requires-python = ">=3.11,<3.14"
version = "1.0.1"
authors = [{ name = "IBM" }]
description = "Granite TSFM toolkit, model wrappers, and demos for time-series forecasting workflows."
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pandas>=2.2.0,<3",
    "scikit-learn<1.8",
    "transformers[torch]==4.56.0",
    "einops",
    "datasets",
    "deprecated",
    "urllib3>=1.26.19",            # see https://github.com/urllib3/urllib3/security/advisories/GHSA-34jh-p97f-mpxf
    "numpy<3",
    "torch<2.9",
    "filelock>=3.20.3"
]

[project.urls]
Homepage = "https://github.com/ibm-granite/granite-tsfm"
Repository = "https://github.com/ibm-granite/granite-tsfm"
Documentation = "https://github.com/ibm-granite/granite-tsfm/wiki"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["tsfm_public*", "tsfmhfdemos*"]

[tool.setuptools.package-data]
tsfm_public = ["resources/**/*.yaml", "models/**/*.png", "models/**/*.webp", "models/**/*.md"]
tsfmhfdemos = ["neurips/**/*.toml", "neurips/**/*.png", "neurips/**/*.md"]

[project.optional-dependencies]


all = ["tsagentkit-patchtst-fm[notebooks,testing,dev]"]

notebooks = [
    "jupyter",
    "matplotlib",
    "datasets",
    "gluonts",
    "ipywidgets",
    "plotly",
    "kaleido",
    "tensorboard",
]
testing = [
    "pytest",
    "pytest-coverage",
    "tsagentkit-patchtst-fm[notebooks]",
    "parameterized",
]
dev = ["tsagentkit-patchtst-fm[testing]", "ruff==0.5.7"]

# ogv deployments will already have jupyter
# and we don't want to mess with RH's tested version
ogv = ["datasets", "plotly", "kaleido"]
demos = [
    "tsagentkit-patchtst-fm[notebooks]",
    "streamlit",
    "altair<5",
    "plotly",
    "streamlit-aggrid",
    "kaleido",
    "toml",
]
# ###################################################

[tool.ruff]

line-length = 119
lint.ignore = ["C901", "E501", "E741", "F402", "F823"]
lint.select = ["C", "E", "F", "I", "W"]
extend-exclude = ["tsfm_public/_version.py"]
extend-include = ["*.ipynb"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["tsfm_public"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
