[project]
name = "tsfm-mcp-server"
version = "0.0.1"
description = "A MCP server for TSFM capabilities"
readme = "README.md"
requires-python = ">=3.9, <3.13"
dependencies = [
    "tsagentkit-patchtst-fm",
    "tsfminference"
]

[tool.uv.sources]
taagentkit-granite-tsfm = { workspace = true }
tsfminference= { workspace = true }