[project]
name = "tsfmfinetuning"
version = "0.0.0"
description = "Finetuning capabilities for IBM Granite TSFM Models"
authors = [{ name = "IBM" }]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "pydantic>1,<3",
    "tsagentkit-patchtst-fm",
    "fastapi>=0.120.2",
    "datasets>=4.5" # with python3.12 this gets back versioned without this for some reason
]

[tool.uv.sources]
taagentkit-granite-tsfm = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest",
    "wget",
    "kubeflow-training",
    "pytest-coverage",
]

[tool.setuptools.packages.find]
include = ["tsfmfinetuning"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
